# Ouroboros

./: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
docs/: Ouroboros_Readme.md  Ouroboros_http_framework_requirements.md  taskCheckList.md
include/ouroboros/: http.hpp
include/ouroboros/http/: error.hpp  http_session.hpp  io_context.hpp  member_binder.hpp  server.hpp  task.hpp  type_definitions.hpp  unique_socket.hpp
src/: main.cpp
src/http/: error.cpp  http_session.cpp  io_context.cpp  server.cpp  unique_socket.cpp
